updated the page layout, fixed spacing, and changed fonts

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   width: 100%;
   padding: 0.5rem 0rem;
   background-color: #FFFFFF;
-  font-family: "Poppins";
+  font-family: "Nunito";
 }
 
 .brand-name {
