--- a/src/components/findACar/FindACar.css
+++ b/src/components/findACar/FindACar.css
@@ -1,6 +1,6 @@
 .search_container {
-  color: blue;
-  width: 100%;
+  color: #0076be;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -9,24 +9,24 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
 }
 
 .search_btn {
   border: 1px solid #0076be;
   border-left: none;
-  padding: 0.6em 3em;
-  font-size: 1.2em;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  padding: 0.5em 3em;
+  font-size: 0.5em;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
   color: white;
   background-color: #0076be;
   cursor: pointer;
 }
 
 .search_content {
-  border: 1px solid red;
+  border: 1px solid ;
 }
 
 .input_search {
@@ -35,18 +35,18 @@
 }
 .input_search input:nth-of-type(1) {
   color: #0076be;
-  font-size: 1.2em;
-  padding: 0.7em 1em;
+  font-size: 1em;
+  padding: 0.5em 1em;
   border: 1px solid #0076be;
   border-right: none;
   outline: none;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  width: 20em;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  width: 15em;
 }
 .input_search input:nth-of-type(2) {
   margin-left: 1em;
-  font-size: 1.2em;
+  font-size: 0.8em;
   padding: 0.6em;
   border-radius: 10px;
   color: white;
