--- a/src/components/findACar/FindACar.module.css
+++ b/src/components/findACar/FindACar.module.css
@@ -1,6 +1,6 @@
 .search_container {
-  color: blue;
-  padding-top: 2em;
+  color: #0076be;
+  padding-top: 0.8em;
   width: 100%;
   margin: 0 auto;
 }
@@ -18,16 +18,16 @@
   border: 1px solid #0076be;
   border-left: none;
   padding: 0.6em 3em;
-  font-size: 1.2em;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  font-size: 1em;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   color: white;
   background-color: #0076be;
   cursor: pointer;
 }
 
 .search_content {
-  padding-top: 4em;
+  padding-top: 2em;
   margin-top: 2em;
   width: 98%;
   justify-content: center;
@@ -35,7 +35,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 4em;
-  background-color: #0076be;
+  background-color: #FFF;
   border-radius: 20px;
 }
 
@@ -45,38 +45,38 @@
 }
 .input_search input:nth-of-type(1) {
   color: #0076be;
-  font-size: 1.2em;
+  font-size: 1em;
   padding: 0.7em 1em;
   border: 1px solid #0076be;
   border-right: none;
   outline: none;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   width: 20em;
 }
 .input_search input:nth-of-type(2) {
   width: 13em;
   margin-left: 1em;
-  font-size: 1.2em;
+  font-size: 1em;
   padding: 0.6em;
-  border-radius: 10px;
+  border-radius: 5px;
   color: white;
   background-color: #0076be;
 }
 .input_search button {
   background-color: #0076be;
   padding: 0.7em 1.5em;
-  font-size: 1.2em;
+  font-size: 1em;
   border: 1px solid #0076be;
   margin-left: 1em;
-  border-radius: 10px;
+  border-radius: 5px;
   color: white;
 }
 
 .map_container {
   width: 25%;
   height: 300px;
-  border: 1px solid blue;
+  border: 1px solid #d3d3d3;
 }
 .map_container img {
   width: 100%;
